* fix sarfari 9 flex bug causing registers to overlap if screen is too small * Add hidden class for registers via sass partial

--- a/sass/px-vis-xy-chart.scss
+++ b/sass/px-vis-xy-chart.scss
@@ -19,14 +19,8 @@
 // Base
 @import "px-flexbox-design/_base.flexbox.scss";
 
-
-.wrapper {
-    width: 100%;
-    height: 100%;
-}
-
-
-
 // Component
+
+@import "px-vis/_px-vis-chart-partial.scss";
 
 // Trumps
